force-app/main/default/objects/Job_Spec__c/Job_Spec__c.object-meta.xml
<CustomObject>
    <label>Job Spec</label>
    <nameField>
        <displayFormat>Nr-{000}</displayFormat>
        <label>Job Spec Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Specs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>