force-app/main/default/objects/Job_Spec__c/fields/AI_Matched_Candidates__c.field-meta.xml
<CustomField>
    <fullName>AI_Matched_Candidates__c</fullName>
    <label>AI Matched Candidates</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>