force-app/main/default/objects/Job_Spec__c/fields/Bursary_Status__c.field-meta.xml
<CustomField>
    <fullName>Bursary_Status__c</fullName>
    <label>Bursary Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advertised</fullName>
            </value>
            <value>
                <fullName>Screen/Review applications</fullName>
            </value>
            <value>
                <fullName>Set up interviews</fullName>
            </value>
            <value>
                <fullName>Interview</fullName>
            </value>
            <value>
                <fullName>Set up assessment</fullName>
            </value>
            <value>
                <fullName>Administer assessment</fullName>
            </value>
            <value>
                <fullName>Process results</fullName>
            </value>
            <value>
                <fullName>Calculate bursary offer</fullName>
            </value>
            <value>
                <fullName>Partner review</fullName>
            </value>
            <value>
                <fullName>Contracts</fullName>
            </value>
            <value>
                <fullName>Capture/update system</fullName>
            </value>
            <value>
                <fullName>Follow up</fullName>
            </value>
            <value>
                <fullName>Update results/POR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>