force-app/main/default/objects/Job_Spec__c/fields/Candidate_Specific_Questions__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Specific_Questions__c</fullName>
    <label>Candidate Specific Questions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>