force-app/main/default/objects/Job_Spec__c/fields/Cost_To_Company_Breakdown__c.field-meta.xml
<CustomField>
    <fullName>Cost_To_Company_Breakdown__c</fullName>
    <label>Cost To Company Breakdown</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>