force-app/main/default/objects/Job_Spec__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Audit</fullName>
            </value>
            <value>
                <fullName>Cloud &amp; Digital</fullName>
            </value>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>Executive Support</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Risk Information, Reporting and Technology</fullName>
            </value>
            <value>
                <fullName>SATIC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>