force-app/main/default/objects/Job_Spec__c/fields/Industries_Worked_in__c.field-meta.xml
<CustomField>
    <fullName>Industries_Worked_in__c</fullName>
    <label>Industries Worked in</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>