force-app/main/default/objects/Job_Spec__c/fields/Job_Link__c.field-meta.xml
<CustomField>
    <fullName>Job_Link__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Id, &quot;Job Link&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Link</label>
    <type>Text</type>
</CustomField>