force-app/main/default/objects/Job_Spec__c/fields/Non_Negotiables__c.field-meta.xml
<CustomField>
    <fullName>Non_Negotiables__c</fullName>
    <label>Minimum Requirements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>