force-app/main/default/objects/Job_Spec__c/fields/Position_Title__c.field-meta.xml
<CustomField>
    <fullName>Position_Title__c</fullName>
    <label>Position Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>