force-app/main/default/objects/Job_Spec__c/fields/Questions_to_ask__c.field-meta.xml
<CustomField>
    <fullName>Questions_to_ask__c</fullName>
    <label>Questions to ask</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>