force-app/main/default/objects/Job_Spec__c/fields/Required_Experience__c.field-meta.xml
<CustomField>
    <fullName>Required_Experience__c</fullName>
    <label>Required Experience</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>