force-app/main/default/objects/Job_Spec__c/fields/RequiredQualifications__c.field-meta.xml
<CustomField>
    <fullName>RequiredQualifications__c</fullName>
    <label>Required Qualifications</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>