force-app/main/default/objects/Job_Spec__c/fields/Salary_Range_Minimum__c.field-meta.xml
<CustomField>
    <fullName>Salary_Range_Minimum__c</fullName>
    <label>Salary Range Minimum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>