force-app/main/default/objects/Job_Spec__c/fields/Send_Applications_to_Hiring_Manager__c.field-meta.xml
<CustomField>
    <fullName>Send_Applications_to_Hiring_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Applications to Hiring Manager</label>
    <type>Checkbox</type>
</CustomField>