force-app/main/default/objects/Job_Spec__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advertise and Screen</fullName>
            </value>
            <value>
                <fullName>Set up interviews</fullName>
            </value>
            <value>
                <fullName>Set up Assessments</fullName>
            </value>
            <value>
                <fullName>Offer &amp; Maintain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>