force-app/main/default/objects/Job_Spec__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advertised</fullName>
            </value>
            <value>
                <fullName>Recruiter to review applications</fullName>
            </value>
            <value>
                <fullName>Candidates to be reviewed by Hiring Manager</fullName>
            </value>
            <value>
                <fullName>Hiring Manager Interviews</fullName>
            </value>
            <value>
                <fullName>Background Checks</fullName>
            </value>
            <value>
                <fullName>Contract Negotiations</fullName>
            </value>
            <value>
                <fullName>Job Offer</fullName>
            </value>
            <value>
                <fullName>Filled</fullName>
            </value>
            <value>
                <fullName>Client Interviews</fullName>
                <isActive>false</isActive>
                <label>Client Interviews</label>
            </value>
            <value>
                <fullName>Internal Interviewing</fullName>
                <isActive>false</isActive>
                <label>Internal Interviewing</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>