force-app/main/default/objects/Job_Spec__c/fields/The_Perfect_Candidate__c.field-meta.xml
<CustomField>
    <fullName>The_Perfect_Candidate__c</fullName>
    <label>The Perfect Candidate</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>