force-app/main/default/objects/Job_Spec__c/recordTypes/Graduate.recordType-meta.xml
<RecordType>
    <fullName>Graduate</fullName>
    <active>true</active>
    <label>Graduate</label>
</RecordType>