force-app/main/default/objects/Job_Spec__c/recordTypes/Permanent_Hire.recordType-meta.xml
<RecordType>
    <fullName>Permanent_Hire</fullName>
    <active>true</active>
    <label>Permanent Hire</label>
</RecordType>